--- a/Bjj/Views/Shared/_Layout.cshtml
+++ b/Bjj/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/Bjj.styles.css" asp-append-version="true"/>
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 </head>
 <body>
 <header>
@@ -20,8 +21,9 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Fighter" asp-action="Index">Fighter</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Fighter" asp-action="Index">Fighters</a>
                     </li>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Fight" asp-action="Index">Fights</a>
                     <li class="nav-item">
                     </li>
                 </ul>
