Add fight result by view and controller

--- a/Bjj/Views/Shared/_Layout.cshtml
+++ b/Bjj/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     </li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Fight" asp-action="Index">Fights</a>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="FightResultBy" asp-action="Index">Finishes</a>
                     </li>
                 </ul>
             </div>
