--- a/Bjj/Views/Fight/Index.cshtml
+++ b/Bjj/Views/Fight/Index.cshtml
@@ -1,3 +1,4 @@
+@using Microsoft.EntityFrameworkCore.Diagnostics
 @model IEnumerable<Bjj.Models.Fight>
 @{
     ViewData["Title"] = "Home Page";
@@ -28,7 +29,10 @@
         </th> 
         <th>
             @Html.DisplayNameFor(model => model.DateOfFight)
-        </th>            
+        </th>   
+        <th>
+            Fight ended by
+        </th> 
         <th>
            Manage
         </th>
@@ -53,9 +57,11 @@
                 @Html.DisplayFor(modelItem => item.DateOfFight)
             </td>
             <td>
-                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a>*@ 
+                @Html.DisplayFor(modelItem => item.FightResultBy.Name)
+            </td>            
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> 
             </td>
         </tr>
     }
