--- a/Bjj/Views/Fighter/Add.cshtml
+++ b/Bjj/Views/Fighter/Add.cshtml
@@ -1,4 +1,4 @@
-@model Bjj.Models.Fighter
+@model FighterViewModel
 
 @{
     ViewData["Title"] = "Add";
@@ -36,7 +36,11 @@
                 <label asp-for="BeltColour" class="control-label"></label>
                 <select asp-for="BeltColour" asp-items="@Html.GetEnumSelectList<BeltColours>()"class="form-control" ></select>
                 <span asp-validation-for="BeltColour" class="text-danger"></span>
-            </div>            
+            </div>  
+            <div class="form-group">
+                @Html.LabelFor(model => model.Academies)
+                @Html.DropDownListFor(x => x.AcademyId, Model.Academies )   
+            </div>                
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
