--- a/Bjj/Views/Fighter/Edit.cshtml
+++ b/Bjj/Views/Fighter/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Bjj.Models.Fighter
+@model Bjj.Models.FighterViewModel 
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,7 +12,6 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -37,6 +36,10 @@
                 <label asp-for="BeltColour" class="control-label"></label>
                 <select asp-for="BeltColour" asp-items="@Html.GetEnumSelectList<BeltColours>()"class="form-control" ></select>
                 <span asp-validation-for="BeltColour" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Academies)
+                @Html.DropDownListFor(x => x.AcademyId, Model.Academies )   
             </div>             
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
