--- a/Bjj/Views/Shared/_Layout.cshtml
+++ b/Bjj/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="FightResultBy" asp-action="Index">Finishes</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Academy" asp-action="Index">Academies</a>
+                    </li>                    
                 </ul>
             </div>
         </div>
