Change button styles, translate some polish words

--- a/Bjj/Views/Academy/Index.cshtml
+++ b/Bjj/Views/Academy/Index.cshtml
@@ -7,9 +7,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1><a asp-action="Add" class="btn" >Add academy</a>
+<h1>Academies</h1>
+<a asp-action="Add" class="btn btn-success" >Add academy</a>
 
-</h1>
 <table class="table">
     <thead>
     <tr>
