--- a/Bjj/Views/Fight/Index.cshtml
+++ b/Bjj/Views/Fight/Index.cshtml
@@ -9,8 +9,8 @@
 }
 
 
-<h1>List of fights <a asp-action="Add" class="btn" >Add fight</a></h1>
-
+<h1>List of fights </h1>
+<a asp-action="Add" class="btn btn-success" >Add fight</a>
 
 <table class="table">
     <thead>
