--- a/Bjj/Views/FightResultBy/Index.cshtml
+++ b/Bjj/Views/FightResultBy/Index.cshtml
@@ -7,9 +7,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1><a asp-action="Add" class="btn" >Add Finish</a>
-
-</h1>
+<h1>Add fight finish</h1>
+<a asp-action="Add" class="btn btn-success" >Add Finish</a>
 <table class="table">
     <thead>
     <tr>
