--- a/Bjj/Views/Fighter/Details.cshtml
+++ b/Bjj/Views/Fighter/Details.cshtml
@@ -80,7 +80,7 @@ window.onload = function () {
 </script>
 <h1>Details</h1>
 
-<h4>Zawodnik</h4>
+<h4>Fighter</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
