--- a/Bjj/Views/Fighter/Index.cshtml
+++ b/Bjj/Views/Fighter/Index.cshtml
@@ -7,9 +7,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>List of competitors <a asp-action="Add" class="btn" >Add Fighter</a> 
+<h1>List of competitors 
 
 </h1>
+<a asp-action="Add" class="btn btn-success" >Add Fighter</a> 
 <table class="table">
     <thead>
     <tr>
